# patina

./: .gitignore  BUGFIXES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIXES_SUMMARY.md  GIT_SETUP.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  TESTING_RESULTS.md  VALIDATION.md  VALIDATION_REPORT.md  test-scrolling.md  test.md
.claude/skills/: README.md
.claude/skills/bench-perf/: instructions.md  skill.json
.claude/skills/check-arch/: instructions.md  skill.json
.claude/skills/check-features/: instructions.md  skill.json
.claude/skills/check-release/: instructions.md  skill.json
.claude/skills/review-api/: instructions.md  skill.json
.claude/skills/validate-build/: instructions.md  skill.json
crates/patina/: Cargo.toml
crates/patina-core/: Cargo.toml
crates/patina-core/src/: buffer.rs  document.rs  frontmatter.rs  history.rs  lib.rs  parser.rs  selection.rs  syntax.rs
crates/patina-core/tests/: editing_workflow.rs  feature_validation.rs  parser_integration.rs
crates/patina-extensions/: Cargo.toml
crates/patina-extensions/src/: emoji.rs  latex.rs  lib.rs  mermaid.rs
crates/patina-gui/: Cargo.toml
crates/patina-gui/src/: main.rs
crates/patina-i18n/: Cargo.toml
crates/patina-i18n/locales/en/: main.ftl
crates/patina-i18n/src/: lib.rs
crates/patina-render/: Cargo.toml
crates/patina-render/examples/: test_tasklist.rs
crates/patina-render/src/: lib.rs  style.rs  theme.rs
crates/patina-render/src/gui/: mod.rs
crates/patina-render/src/tui/: app.rs  editor.rs  mod.rs  preview.rs  renderer.rs  widgets.rs
crates/patina-render/tests/: input_mode_tests.rs
crates/patina/src/: app.rs  config.rs  input.rs  main.rs  ui.rs
examples/: frontmatter_sample.md  full_features.md  latex_and_emoji.md  test_fixes.md
specs/: README.md  patina-product-spec.md
specs/versions/: v0.1.0-foundation.md  v0.2.0-editing.md  v0.3.0-parsing.md  v0.4.0-preview.md  v0.5.0-syntax.md  v0.6.0-mvp.md
