[package]
name = "patina-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internationalization for Patina"

[dependencies]
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true

thiserror.workspace = true
log.workspace = true
once_cell.workspace = true
